--- a/index.html
+++ b/index.html
@@ -11,11 +11,19 @@
       }
       @font-face {
         font-family: "ArialNarrow-Bold";
-        src: url("./fonts/ArialNarrow-Bold.woff2") format("woff2");
+        src: url("./fonts/ArialBold.woff") format("woff");
       }
       @font-face {
         font-family: "ArialNarrow";
-        src: url("./fonts/ArialNarrow.woff") format("woff");
+        src: url("./fonts/ArialRegular.woff") format("woff");
+      }
+      @font-face {
+        font-family: "ArialItalic";
+        src: url("./fonts/ArialItalic.woff") format("woff");
+      }
+      @font-face {
+        font-family: "ArialItalicBold";
+        src: url("./fonts/ArialBoldItalic.woff") format("woff");
       }
     </style>
   </head>
@@ -157,10 +165,11 @@
                   style="
                     padding-left: 35px;
                     padding-right: 37px;
-                    font-size: 17px;
+                    font-size: 14px;
                     letter-spacing: 0px;
                     line-height: 16px;
                     color: #000000;
+                    text-align: justify;
                   "
                 >
                   Lorem ipsum dolor sit amet, consectetur adipiscing elit. Rem
@@ -217,10 +226,11 @@
                   style="
                     padding-left: 35px;
                     padding-right: 37px;
-                    font-size: 17px;
+                    font-size: 14px;
                     letter-spacing: 0px;
                     line-height: 16px;
                     color: #000000;
+                    text-align: justify;
                   "
                 >
                   Lorem ipsum dolor sit amet, consectetur adipiscing elit. Rem
@@ -276,15 +286,16 @@
                 <p
                   style="
                     padding-left: 35px;
-                    padding-right: 25px;
-                    font-size: 17px;
+                    padding-right: 37px;
+                    font-size: 14px;
                     letter-spacing: 0px;
                     line-height: 16px;
                     color: #000000;
+                    text-align: justify;
                   "
                 >
-                  <b
-                    >Lorem ipsum dolor sit amet, consectetur adipiscing elit.</b
+                  <span style="font-family: 'ArialNarrow-Bold', sans-serif;"
+                    >Lorem ipsum dolor sit amet, consectetur adipiscing elit.</span
                   >
                   Praesentium excepturi quibusdam, illum quam, ut cum est
                   temporibus perferendis dolor rerum pariatur provident
@@ -296,33 +307,15 @@
                   style="
                     padding-left: 35px;
                     padding-right: 37px;
-                    font-size: 16px;
+                    font-size: 14px;
                     letter-spacing: 0px;
                     line-height: 17px;
                     color: #000000;
+                    text-align: justify;
                   "
                 >
-                  <b
-                    >Lorem ipsum dolor sit amet, consectetur adipiscing elit.</b
-                  >
-                  Praesentium excepturi quibusdam, illum quam, ut cum est
-                  temporibus perferendis dolor rerum pariatur provident
-                  consequatur accusamus alias perspiciatis placeat! Voluptatibus
-                  eligendi quos, consequatur impedit omnis, recusandae laborum
-                  sit magni explicabo quo rem.
-                </p>
-                <p
-                  style="
-                    padding-left: 35px;
-                    padding-right: 25px;
-                    font-size: 17px;
-                    letter-spacing: 0px;
-                    line-height: 16px;
-                    color: #000000;
-                  "
-                >
-                  <b
-                    >Lorem ipsum dolor sit amet, consectetur adipiscing elit.</b
+                  <span style="font-family: 'ArialItalic', sans-serif;"
+                    >Lorem ipsum dolor sit amet, consectetur adipiscing elit.</span
                   >
                   Praesentium excepturi quibusdam, illum quam, ut cum est
                   temporibus perferendis dolor rerum pariatur provident
@@ -334,10 +327,31 @@
                   style="
                     padding-left: 35px;
                     padding-right: 37px;
-                    font-size: 17px;
+                    font-size: 14px;
                     letter-spacing: 0px;
                     line-height: 16px;
                     color: #000000;
+                    text-align: justify;
+                  "
+                >
+                  <span style="font-family: 'ArialItalicBold', sans-serif;"
+                    >Lorem ipsum dolor sit amet, consectetur adipiscing elit.</span
+                  >
+                  Praesentium excepturi quibusdam, illum quam, ut cum est
+                  temporibus perferendis dolor rerum pariatur provident
+                  consequatur accusamus alias perspiciatis placeat! Voluptatibus
+                  eligendi quos, consequatur impedit omnis, recusandae laborum
+                  sit magni explicabo quo rem.
+                </p>
+                <p
+                  style="
+                    padding-left: 35px;
+                    padding-right: 37px;
+                    font-size: 14px;
+                    letter-spacing: 0px;
+                    line-height: 16px;
+                    color: #000000;
+                    text-align: justify;
                   "
                 >
                   Lorem ipsum dolor sit amet, consectetur adipiscing elit.
