--- a/index.html
+++ b/index.html
@@ -113,7 +113,8 @@
                     background: url('./images/compass.png') no-repeat center,
                       url('./images/principles.png') no-repeat center,
                       url('./images/road.png') no-repeat center;
-                    background-size: 50%, cover, 400%;
+                    background-size: 50%, cover, 250%;
+                    background-position: center, center, -310px -120px;
                   "
                 ></div>
               </td>
