--- a/index.html
+++ b/index.html
@@ -46,19 +46,11 @@
           <table
             width="600"
             height="225"
-            style="
-              border: none;
-              box-sizing: border-box;
-              -webkit-border-horizontal-spacing: 0;
-              -webkit-border-vertical-spacing: 0;
-            "
+            cellspacing="0"
+            cellpadding="0"
+            style="border: none; box-sizing: border-box"
           >
-            <tr
-              style="
-                -webkit-border-horizontal-spacing: 0;
-                -webkit-border-vertical-spacing: 0;
-              "
-            >
+            <tr>
               <td
                 width="251"
                 height="225"
@@ -98,13 +90,7 @@
                   Leading the Way to a Distinctive<br />1/1/17
                 </p>
               </td>
-              <td
-                style="
-                  padding: 0;
-                  -webkit-border-horizontal-spacing: 0;
-                  -webkit-border-vertical-spacing: 0;
-                "
-              >
+              <td style="padding: 0">
                 <div
                   style="
                     position: relative;
@@ -123,13 +109,9 @@
 
           <!-- Розділ 1 -->
           <table
-            style="
-              width: 600px;
-              border: none;
-              -webkit-border-horizontal-spacing: 0;
-              -webkit-border-vertical-spacing: 0;
-              box-sizing: border-box;
-            "
+            cellspacing="0"
+            cellpadding="0"
+            style="width: 600px; border: none; box-sizing: border-box"
           >
             <tr>
               <td style="margin-bottom: 25px">
@@ -184,13 +166,9 @@
 
           <!-- Розділ  2 -->
           <table
-            style="
-              width: 600px;
-              border: none;
-              -webkit-border-horizontal-spacing: 0;
-              -webkit-border-vertical-spacing: 0;
-              box-sizing: border-box;
-            "
+            cellspacing="0"
+            cellpadding="0"
+            style="width: 600px; border: none; box-sizing: border-box"
           >
             <tr>
               <td style="margin-bottom: 25px">
@@ -245,13 +223,9 @@
 
           <!-- Розділ 3 -->
           <table
-            style="
-              width: 600px;
-              border: none;
-              -webkit-border-horizontal-spacing: 0;
-              -webkit-border-vertical-spacing: 0;
-              box-sizing: border-box;
-            "
+            cellspacing="0"
+            cellpadding="0"
+            style="width: 600px; border: none; box-sizing: border-box"
           >
             <tr>
               <td style="margin-bottom: 25px">
@@ -295,8 +269,9 @@
                     text-align: justify;
                   "
                 >
-                  <span style="font-family: 'ArialNarrow-Bold', sans-serif;"
-                    >Lorem ipsum dolor sit amet, consectetur adipiscing elit.</span
+                  <span style="font-family: 'ArialNarrow-Bold', sans-serif"
+                    >Lorem ipsum dolor sit amet, consectetur adipiscing
+                    elit.</span
                   >
                   Praesentium excepturi quibusdam, illum quam, ut cum est
                   temporibus perferendis dolor rerum pariatur provident
@@ -315,8 +290,9 @@
                     text-align: justify;
                   "
                 >
-                  <span style="font-family: 'ArialItalic', sans-serif;"
-                    >Lorem ipsum dolor sit amet, consectetur adipiscing elit.</span
+                  <span style="font-family: 'ArialItalic', sans-serif"
+                    >Lorem ipsum dolor sit amet, consectetur adipiscing
+                    elit.</span
                   >
                   Praesentium excepturi quibusdam, illum quam, ut cum est
                   temporibus perferendis dolor rerum pariatur provident
@@ -335,8 +311,9 @@
                     text-align: justify;
                   "
                 >
-                  <span style="font-family: 'ArialItalicBold', sans-serif;"
-                    >Lorem ipsum dolor sit amet, consectetur adipiscing elit.</span
+                  <span style="font-family: 'ArialItalicBold', sans-serif"
+                    >Lorem ipsum dolor sit amet, consectetur adipiscing
+                    elit.</span
                   >
                   Praesentium excepturi quibusdam, illum quam, ut cum est
                   temporibus perferendis dolor rerum pariatur provident
